crates/solidity/testing/snapshots/bindings_output/using/address/generated/0.5.3-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or TypeKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:7:9]
   │
 7 │ ╭─▶         payable(_rcpt).sendValue();
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ library Address {
   │         ───┬───  
   │            ╰───── name: 1
 2 │     function sendValue(address payable recipient) internal {}
   │              ────┬────                 ────┬────  
   │                  ╰──────────────────────────────── name: 2
   │                                            │      
   │                                            ╰────── name: 3
   │ 
 4 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 4
 5 │     using Address for address payable;
   │           ───┬───  
   │              ╰───── ref: 1
 6 │     function test(address _rcpt) public {
   │              ──┬─         ──┬──  
   │                ╰───────────────── name: 5
   │                             │    
   │                             ╰──── name: 6
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │     ╭─▶ library Address {
 2 │     │       function sendValue(address payable recipient) internal {}
   │     │   ───────────────────────────────┬───┬──────────────────────────  
   │     │                                  ╰──────────────────────────────── definiens: 2
   │     │                                      │                            
   │     │                                      ╰──────────────────────────── definiens: 3
 3 │ │   ├─▶ }
   │ │   │       
   │ │   ╰─────── definiens: 1
 4 │ ╭─────▶ contract Test {
   ┆ ┆ ┆     
 6 │ │ ╭───▶     function test(address _rcpt) public {
   │ │ │                       ──────┬──────  
   │ │ │                             ╰──────── definiens: 6
   ┆ ┆ ┆     
 8 │ │ ├───▶     }
   │ │ │             
   │ │ ╰───────────── definiens: 5
 9 │ ├─────▶ }
   │ │           
   │ ╰─────────── definiens: 4
───╯
